# TFS-RUST

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  Cargo.toml  GAPS.md  OTCLIENT_V8_PROTOCOL_REFERENCE.md  README.md  THROW_FIX_BLOCK_SOLID_SUMMARY.md  THROW_FIX_SUMMARY.md  WALKING_FIX_SUMMARY.md  config.lua.dist  findings.md  protocol_audit_2026_04_05.md  protocol_audit_rust_vs_cpp_2026_04_05.md  schema.sql
.agents/rules/: code-hygeine.md  cpp-ref.md  database.md  entity-storage.md  lua.md  mechanics.md  output.md  packets.md  protocol-versioning.md  rust-idioms.md  tfs-code-hygiene.md  tfs-core.md  tfs-cpp-references.md  tfs-database.md  tfs-entity-storage.md  tfs-lua-boundaries.md  tfs-mechanics-profile.md  tfs-output-format.md  tfs-packets.md  tfs-protocol-versioning.md  tfs-rust-idioms.md  tfs-threading.md  tfs-wire-codec.md  tfs-workflow.md  threading.md  wire-codec.md  workflow.md
.cursor/rules/: TFS-Core.mdc  TFS-Workflow.mdc  TFS-cpp-references.mdc  (+7 more)
.sqlx/: query-24788f3bf06e02a3411a84c7661e948bf9a1e94b379a58424657a676042704db.json
crates/tfs-rust-content/: Cargo.toml
crates/tfs-rust-content/src/: groups.rs  item_abilities.rs  items.rs  items_xml_keys.rs  lib.rs  monsters.rs  mounts.rs  objects_srv.rs  otb.rs  otb_patch.rs  otbm.rs  outfits.rs  pipeline.rs  spawns.rs  vocations.rs
crates/tfs-rust-content/tests/: audit_objects_srv_waypoints.rs
crates/tfs-rust-core/: Cargo.toml
crates/tfs-rust-core/src/: chase_debug.rs  condition.rs  config.rs  container.rs  container_ops.rs  container_ui.rs  creature.rs  creature_think.rs  creature_todo.rs  cylinder.rs  death.rs  decay.rs  event_dispatcher.rs  floor_change_use.rs  formulas.rs  game_loop.rs  game_world.rs  game_world_inventory.rs  game_world_item_cylinder.rs  game_world_item_move.rs  game_world_lifecycle.rs  game_world_player.rs  game_world_player_throw.rs  game_world_save.rs  game_world_script.rs  game_world_spectators.rs  game_world_tick.rs  guild.rs  house.rs  idle_stimulus.rs  ids.rs  inventory.rs  inventory_slots.rs  item.rs  item_attributes.rs  item_blob.rs  item_constants.rs  item_look.rs  lib.rs  login.rs  (+39 more)
crates/tfs-rust-core/src/combat/: math.rs  mod.rs  pvp.rs  rng.rs
crates/tfs-rust-core/src/creature/: base.rs  kind.rs  light.rs  mod.rs  monster.rs  npc.rs  player.rs  vocation.rs
crates/tfs-rust-core/src/map/: grid.rs  los.rs  mod.rs  qtree.rs
crates/tfs-rust-core/src/walk/: mod.rs  walk_tile.rs  walk_timing.rs
crates/tfs-rust-core/tests/: arena.rs  combat.rs  conditions.rs  inventory_container_gaps.rs  map_los.rs  matrix.rs  mechanics_formulas.rs  wildcard.rs
crates/tfs-rust-db/: Cargo.toml
crates/tfs-rust-db/migrations/: 20240101000000_tfs_142_baseline.sql  20250530000000_widen_accounts_password.sql
crates/tfs-rust-db/src/: account.rs  house.rs  items.rs  lib.rs  market.rs  migrations.rs  password.rs  player.rs  pool.rs  sqlx_offline.rs
crates/tfs-rust-db/tests/: sql_safety.rs
crates/tfs-rust-net/: Cargo.toml
crates/tfs-rust-net/examples/: game_login_smoke.rs  tcp_smoke.rs
crates/tfs-rust-net/src/: adler.rs  creature_encode.rs  creature_known.rs  game_challenge.rs  game_command.rs  game_first_packet.rs  game_frame.rs  game_parse.rs  item_encode.rs  lib.rs  map_description.rs  message.rs  outgoing.rs  outgoing_extra.rs  pending_login.rs  protocol.rs  protocol_game.rs  protocol_login_out.rs  rsa.rs  server.rs  xtea.rs  xtea_tfs.rs
crates/tfs-rust-net/src/codec/: mod.rs  v1098.rs  v772.rs  wire.rs
crates/tfs-rust-net/tests/: compression.rs  load_key_pem.rs  map_description.rs  message.rs  protocol_compat.rs  protocol_game_dispatch.rs  xtea.rs  xtea_game_body.rs
docs/: 772_MONSTER_AI_TARGETING_PATHING_GAP_AUDIT.md  772_OTCLIENT_PARITY.md  CIP_CIPSOFT_NAMING_AUDIT.md  CODEBASE_AUDIT.md  COMPILING.md  DIAGNOSTIC_FINDINGS_772_MONSTER_AI.md  GAME_LOOP_ARCHITECTURE.md  IDLE_STIMULUS.md  INVENTORY_STATUS.md  MEMORY_USAGE_ANALYSIS.md  MOVEMENT_CPP_VS_RUST.md  OTCLIENT_INFO.md  PHASE_D_IMPLEMENTATION.md  PROJECT_STATUS.md  PROTOCOL_VERSIONING.md  PROTOCOL_VERSIONING_IMPLEMENTATION_PLAN.md  TFS-RUST_772_Chase_Path_Parity_Gaps.md  TFS-RUST_772_Monster_AI_Comprehensive_Gap_Audit.md  TFS-RUST_772_Monster_AI_Dance_Chase_Parity.md  TFS-RUST_772_Pathfinding_Creature_AI_Analysis.md  TFS-RUST_refactoring_opportunities.md  TIBIA_GAME_MASTER_DEV.md  WALKING_IMPLEMENTATION_PLAN.md  phase1-otclient-checkpoint.md
reference/: README.md
rust-src/: main.rs
scripts/: audit_objects_srv_waypoints_vs_otb.py  build_ipchanger.sh  compare_chase_live_logs.py  compare_chase_pathfinding.py  patch_otb_waypoints.sh  patch_tibia_client.py  run_game_login_smoke.sh  run_server.sh  seed_test_account.sql  seed_test_account_2.sql  setup_mariadb.sh  tibia_game_dev.sh  tibia_game_online.sh
src/: CMakeLists.txt  Makefile  actions.cpp  cmake_install.cmake  combat.cpp  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connectionpool.cpp  connectionpool.h  const.h  container.cpp  container.h  creature.cpp  creature.h  cylinder.cpp  cylinder.h  database.cpp  database.h  databasetasks.cpp  decay.cpp  decay.h  definitions.h  depotchest.cpp  depotlocker.cpp  enums.h  events.cpp  events.h  game.cpp  game.h  housetile.cpp  iologindata.cpp  iologindata.h  iomarket.cpp  iomarket.h  item.cpp  item.h  items.cpp  (+38 more)
tasks/: 00-audit.md  01-protocol-bugs.md  02-phase-A.md  03-phase-B-C.md  04-phase-D-E.md  05-phase-F-G-H.md  06-phase-I-J.md  07-phase-K-L.md  08-roadmap.md  09-lua-strategy.md  Idioms-audit.md  TODO.md  config-and-save-plan.md  container-bugs.md  inventory_implementation_plan.md  items-parsing-audit.md  lessons.md  login-sequence-fixes.md  map-packet-fixes.md  packet-proxy-spec.md  port-plan.md  reference-corrections-1.4-vs-1.8.md  review-phase0-phase1.md  todo.md  walk-audit.md  walk-fix-todo.md
tools/: simulate_idle_todo_compare.py
tools/packet-proxy/: Cargo.toml
tools/packet-proxy/src/: connection.rs  decrypt.rs  handshake.rs  logger.rs  main.rs  opcodes.rs
(+2581 files in other folders)
