[package]
name = "tfs-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tfs-rust"
path = "rust-src/main.rs"

[workspace]
members = [
    "crates/tfs-rust-common",
    "crates/tfs-rust-content",
    "crates/tfs-rust-db",
    "crates/tfs-rust-net",
    "crates/tfs-rust-lua",
    "crates/tfs-rust-core",
    "tools/packet-proxy",
]
resolver = "2"

[workspace.dependencies]
tfs-rust-common = { path = "crates/tfs-rust-common" }
tfs-rust-content = { path = "crates/tfs-rust-content" }
tfs-rust-db = { path = "crates/tfs-rust-db" }
tfs-rust-net = { path = "crates/tfs-rust-net" }
tfs-rust-lua = { path = "crates/tfs-rust-lua" }
tfs-rust-core = { path = "crates/tfs-rust-core" }

tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
byteorder = "1.5"
bytes = "1.5"
rsa = "0.9"
num-bigint-dig = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
flate2 = "1.0"
sqlx = { version = "0.7", features = ["macros", "mysql", "runtime-tokio-rustls", "chrono", "migrate"] }
async-trait = "0.1"
quick-xml = { version = "0.31", features = ["serialize"] }
slotmap = "1.0"
bitflags = "2.6"
dashmap = "6.1"
mlua = { version = "0.9", default-features = false, features = ["lua51", "vendored", "async", "send"] }

[dependencies]
tfs-rust-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

