[package]
name = "tfs-rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tfs-rust-common = { workspace = true }
tfs-rust-db = { workspace = true }
tfs-rust-content = { workspace = true }
slotmap = { workspace = true }
dashmap = { workspace = true }
mlua = { workspace = true }
rand = "0.8"

[dev-dependencies]
proptest = "1.4"
