[package]
name = "tfs-rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tfs-rust-common = { workspace = true }
tfs-rust-db = { workspace = true }
tfs-rust-net = { workspace = true }
tfs-rust-content = { workspace = true }
tfs-rust-lua = { path = "../tfs-rust-lua" }
slotmap = { workspace = true }
dashmap = { workspace = true }
mlua = { workspace = true }
rand = "0.8"
bitflags = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rustc-hash = "1"
smallvec = { version = "1", features = ["union"] }

[dev-dependencies]
proptest = "1.4"
