[package]
name = "tfs-rust-db"
version = "0.1.0"
edition = "2021"

[package.metadata.sqlx]
migrations-dir = "migrations"

[dependencies]
sha1 = "0.10"
bcrypt = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tfs-rust-common = { workspace = true }
